# audio

./: .gitignore  CMakeLists.txt  main.cpp  sound.hpp
include/: bus.hpp  context.hpp  fft.hpp  sound.hpp  util.hpp
include/plugins/: delay.hpp  gain.hpp  oscillator.hpp  plugin.hpp
src/: CMakeLists.txt  fft.cpp  main.cpp
